--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,20 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.2.2
 
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_analytics: ^11.3.0
+  firebase_crashlytics: ^4.1.3
+  firebase_messaging: ^15.1.2
+  firebase_remote_config: ^5.0.5
+
   # UI
   google_fonts: ^6.2.1
   intl: ^0.20.2
+  flutter_markdown: ^0.7.3
+  file_selector: ^1.0.3
+  url_launcher: ^6.3.1
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
